# SchurVINS

./: .gitignore
src/SchurVINS/logs/: imu_traj.txt
src/SchurVINS/rpg_common/: CMakeLists.txt  package.xml
src/SchurVINS/svo/: CMakeLists.txt  package.xml
src/SchurVINS/svo/include/svo/: frame_handler_base.h  imu_handler.h  schur_vins.h
src/SchurVINS/svo/src/: frame_handler_base.cpp  imu_handler.cpp  schur_vins.cpp
src/SchurVINS/svo_ceres_backend/: CMakeLists.txt  package.xml
src/SchurVINS/svo_ceres_backend/include/svo/: ceres_backend_interface.hpp  ceres_backend_publisher.hpp
src/SchurVINS/svo_ceres_backend/src/: ceres_backend_interface.cpp  ceres_backend_publisher.cpp
src/SchurVINS/svo_cmake/: CMakeLists.txt  package.xml
src/SchurVINS/svo_cmake/cmake/: svo_cmake-extras.cmake
src/SchurVINS/svo_cmake/cmake/Modules/: SvoSetup.cmake
src/SchurVINS/svo_common/: CMakeLists.txt  package.xml
src/SchurVINS/svo_common/include/svo/common/: logging.h
src/SchurVINS/svo_direct/: CMakeLists.txt  package.xml
src/SchurVINS/svo_img_align/: CMakeLists.txt  package.xml
src/SchurVINS/svo_msgs/: CMakeLists.txt  package.xml
src/SchurVINS/svo_msgs/msg/: DenseInput.msg  DenseInputWithFeatures.msg  Info.msg  NbvTrajectory.msg
src/SchurVINS/svo_ros/: CMakeLists.txt  package.xml  rviz_config.origin  rviz_config.rviz  rviz_config_gm.rviz  rviz_config_vio.rviz
src/SchurVINS/svo_ros/include/svo_ros/: ceres_backend_factory.h  svo_factory.h  svo_interface.h  svo_node_base.h  visualizer.h
src/SchurVINS/svo_ros/launch/: euroc_vio_stereo.launch  euroc_vio_stereo.launch.py  great_vio_stereo.launch  great_vio_stereo.launch.py
src/SchurVINS/svo_ros/param/: vio_stereo_great.yaml  vio_stereo_hard.yaml
src/SchurVINS/svo_ros/param/calib/: great_stereo.yaml
src/SchurVINS/svo_ros/src/: ceres_backend_factory.cpp  svo_factory.cpp  svo_interface.cpp  svo_node_base.cpp  visualizer.cpp
src/SchurVINS/svo_tracker/: CMakeLists.txt  package.xml
src/SchurVINS/svo_vio_common/: CMakeLists.txt  package.xml
src/SchurVINS/vikit/vikit_cameras/: CMakeLists.txt  package.xml
src/SchurVINS/vikit/vikit_common/: CMakeLists.txt  package.xml
src/SchurVINS/vikit/vikit_ros/: CMakeLists.txt  package.xml
src/SchurVINS/vikit/vikit_ros/include/vikit/: img_type_conversion.h  output_helper.h  params_helper.h
src/SchurVINS/vikit/vikit_ros/src/: img_type_conversion.cpp  output_helper.cpp
src/SchurVINS/vikit/vikit_solver/: CMakeLists.txt  package.xml
src/fast_neon/: CMakeLists.txt  package.xml
src/minkindr/minkindr/: CMakeLists.txt  package.xml
src/minkindr_ros/opengv/: CMakeLists.txt  package.xml
