<?xml version="1.0"?>
<package format="3">
  <name>fast</name>
  <version>0.0.0</version>
  <description>The fast package</description>
  <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>
  
  <license>RPG</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
