<?xml version="1.0"?>
<package format="3">
  <name>svo</name>
  <version>0.1.0</version>
  <description>
    Monocular Visual Odometry
  </description>
  <author>Christian Forster</author>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>glog</depend>
  <depend>opencv</depend>
  <depend>opengv</depend>
  <depend>rpg_common</depend>
  <depend>svo_cmake</depend>
  <depend>svo_common</depend>
  <depend>svo_direct</depend>
  <depend>svo_img_align</depend>
  <depend>svo_tracker</depend>
  <depend>svo_vio_common</depend>
  <depend>vikit_cameras</depend>
  <depend>vikit_common</depend>
  <depend>vikit_ros</depend>
  <depend>vikit_solver</depend>
  <depend>yaml-cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
