<?xml version="1.0"?>
<package format="3">
  <name>svo_ceres_backend</name>
  <version>0.1.4</version>
  <description>
    svo_ceres_backend
  </description>
  <maintainer email="jhuber91@gmail.com">Jonathan Huber</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Ceres</depend>
  <depend>Eigen3</depend>
  <depend>geometry_msgs</depend>
  <depend>gflags</depend>
  <depend>glog</depend>
  <depend>opencv</depend>
  <depend>opengv</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>svo</depend>
  <depend>svo_cmake</depend>
  <depend>svo_common</depend>
  <depend>svo_vio_common</depend>
  <depend>vikit_common</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
