<?xml version="1.0"?>
<package format="3">
  <name>svo_tracker</name>
  <description>
    SVO tracking module.
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <author>Christian Forster</author>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>glog</depend>
  <depend>opencv</depend>
  <depend>svo_cmake</depend>
  <depend>svo_common</depend>
  <depend>svo_direct</depend>

  <test_depend>gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
