<?xml version="1.0"?>
<package format="3">
  <name>minkindr</name>
  <version>1.0.0</version>
  <description>minkindr</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>Eigen3</depend>
  <depend>glog</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
