<?xml version="1.0"?>
<package format="3">
  <name>opengv</name>
  <version>1.0.0</version>
  <description>opengv</description>
  <maintainer email="laurent.kneip@anu.edu.au">Laurent Kneip</maintainer>
  <license>FreeBSD</license>
  <author>Laurent Kneip</author>
  <url>http://ros.org/wiki/opengv</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>Eigen3</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
