<?xml version="1.0"?>
<package format="3">
  <name>vikit_cameras</name>
  <version>0.0.0</version>
  <description>The vikit_cameras package</description>
  <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>glog</depend>
  <depend>minkindr</depend>
  <depend>opencv</depend>
  <depend>svo_cmake</depend>
  <depend>vikit_common</depend>
  <depend>yaml-cpp</depend>

  <test_depend>gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
