<?xml version="1.0"?>
<package format="3">
  <name>vikit_ros</name>
  <version>0.0.0</version>
  <description>The vikit_ros package</description>
  <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>
  <license>RPG</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>Eigen3</depend>
  <depend>geometry_msgs</depend>
  <depend>glog</depend>
  <depend>minkindr</depend>
  <depend>opencv</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>svo_cmake</depend>
  <depend>tf2_ros</depend>
  <depend>vikit_common</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
